Netflix - Senior Data Scientist, Growth Marketing. Benefitfocus Careers - Sr. Director, Data Science. BlueVine - Data Science QA Developer. Pond5 - Data Scientist. Data Scientist - BlackHorse Solutions - Career Page. Associate Data Scientist | WorkNOLA. Data Scientist, People Analytics. Data Science Interns. HubHaus Inc - Data Scientist - Property Pricing. Job Application for Data Science Intern - Summer 2020 at Optoro. JAVA Applikationsentwickler Fullstack (m/w) | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services.     Data Scientist - Fraud at Simpl . Data Scientist Job in Lisboa, Portugal. Verisk Data Science UK Summer Internship 2019 | SmartRecruiters. Omio Senior Data Scientist - Product Intelligence | SmartRecruiters. Data Science Lead. Amyris - Senior Data Scientist. Freedom Financial Network Careers - Senior Data Scientist. Job Application for Data Analyst, Data Science & Analytics at QuestBridge. Job Application for Graduate Data Scientist at Signifyd. Shopify - Senior Data Scientist (Multiple Roles). Unity Careers - Data Science Manager, Monetization @ San Francisco. Unity Careers - Data Science Manager, Monetization @ San Francisco. Job Application for Associate Data Scientist at Cardlytics. Job Application for Data Scientist  at Cardlytics. Farfetch Careers - Senior Data Science Engineer (Mandarin). LogRocket - Data Scientist. Castlight Health Careers - Software Engineer (Python / Ruby), Data Science. NICE Careers - Data Science Intern. 4Catalyzer Senior Data Scientist | SmartRecruiters. Senior Data Scientist-2. Summer 2020 Intern - Data Science. Associate Computational Biologist, Data Sciences Platform. Data Scientist (Financial Services) - Fractal Analytics - Career Page. Job Application for Data Scientist, Analytics - New York at Rocket Travel, Inc.. Omio Data Science - Marketing Science | SmartRecruiters. Omio Lead Data Scientist - Product Intelligence | SmartRecruiters. ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters.     

--- a/data-science.html
+++ b/data-science.html
@@ -87,13 +87,25 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Design and implement data science research projects that utilize advanced 
+statistical methods, such as regression analysis and machine learning, to 
+address?...</p>
+<hr/>
+<h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... At SailPoint, you will work on the latest tools in Machine Learning, Big Data, 
+Cloud Computing, Graph Databases to solve challenging problems. This is a 
+paid?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
@@ -126,11 +138,11 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=69c7f557-de71-4a89-bcc3-b2f9de190d1f'>Data Science Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=69c7f557-de71-4a89-bcc3-b2f9de190d1f'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Emeryville, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +186,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlighthealth/job/od6obfwC'>Castlight Health Careers - Software Engineer (Python / Ruby), Data Science</a></h5> 
+<h5><a href='https://jobs.jobvite.com/castlighthealth/job/od6obfwC'>Castlight Health Careers - Software Engineer (Python / Ruby), Data Science</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -215,7 +227,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -233,7 +245,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
+<h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -241,7 +253,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hackerearthjobs.recruiterbox.com/jobs/fk0fl9w'>
+<h5><a href='http://hackerearthjobs.recruiterbox.com/jobs/fk0fl9w'>
     Data Science Intern at HackerEarth
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -267,7 +279,7 @@ and?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
@@ -374,11 +386,11 @@ Data Science & Engineering. full-time. Submit your application. Resume/CV ?.</p>
 <p>2 days ago ... KAYAK or OpenTable (as the case may be) will process your personal data in 
 accordance with data protection law for the purposes described in our privacy?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698124393-senior-data-scientist-h-f-'>Ubisoft Senior Data Scientist (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698124393-senior-data-scientist-h-f-'>Ubisoft Senior Data Scientist (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -410,7 +422,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/modeanalytics/jobs/1931842'>Job Application for Senior Data Scientist at Mode</a></h5> 
+<h5><a href='https://boards.greenhouse.io/modeanalytics/jobs/1931842'>Job Application for Senior Data Scientist at Mode</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -426,7 +438,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999697963178-sr-associate-data-scientist'>Visa Sr. Associate Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999697963178-sr-associate-data-scientist'>Visa Sr. Associate Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -494,14 +506,6 @@ Supervision Data Scientist Manager is responsible for coordinating efforts on th
       Data Scientist - The Plum Guide 
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/novetta/jobs/4478992002'>Job Application for Data Science Instructor at Novetta</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/novetta/jobs/4479006002'>Job Application for Data Scientist SME at Novetta</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
