--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,6 +73,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/miqdigital/jobs/4494271002'>Job Application for Senior Financial and Business Intelligence Analyst  at MiQ Digital</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -122,7 +126,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1908346'>Job Application for Business Intelligence Solutions Developer at Signifyd</a></h5> 
+<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1908346'>Job Application for Business Intelligence Solutions Developer at Signifyd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -202,7 +206,7 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dynatrace/49000f76-be86-4614-9045-c80978f998cd'>Dynatrace - Business Intelligence Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/dynatrace/49000f76-be86-4614-9045-c80978f998cd'>Dynatrace - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -266,7 +270,7 @@ using?...</p>
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698009318-business-intelligence-consultant-j000605-'>outsourced Business Intelligence Consultant (J000605) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698009318-business-intelligence-consultant-j000605-'>outsourced Business Intelligence Consultant (J000605) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines  Philippines</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -303,7 +307,7 @@ using?...</p>
 <p>5 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Claranet/743999696597480-business-intelligence-analyst-agualva-cacem'>Claranet Business Intelligence?Analyst - Agualva/Cac?m | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Claranet/743999696597480-business-intelligence-analyst-agualva-cacem'>Claranet Business Intelligence?Analyst - Agualva/Cac?m | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -311,7 +315,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/448920-business-intelligence-analyst'>Job @ Oetker Digital (Berlin): Business Intelligen... | JOIN</a></h5> 
+<h5><a href='https://oetkerdigital.join.com/jobs/448920-business-intelligence-analyst'>Job @ Oetker Digital (Berlin): Business Intelligen... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -331,7 +335,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Austin Austin Austin</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -392,7 +396,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/jbs/job/obWnbfwp'> JBS USA Careers - IT BUSINESS INTELLIGENCE ANALYST</a></h5> 
+<h5><a href='https://jobs.jobvite.com/jbs/job/obWnbfwp'> JBS USA Careers - IT BUSINESS INTELLIGENCE ANALYST</a></h5> 
 <p><span class="badge badge-light">Greeley, Colorado</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -408,7 +412,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mcmakler.join.com/jobs/443800-senior-business-intelligence-engineer-m-f-x'>Job @ McMakler (Berlin): Senior Business Intellige... | JOIN</a></h5> 
+<h5><a href='https://mcmakler.join.com/jobs/443800-senior-business-intelligence-engineer-m-f-x'>Job @ McMakler (Berlin): Senior Business Intellige... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -420,11 +424,11 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/chegg/job/oFn4afw0'>Chegg Careers - Senior Business Intelligence Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/chegg/job/oFn4afw0'>Chegg Careers - Senior Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CAUnited States</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/industrious/jobs/1917666'>Job Application for Business Intelligence Analyst at Industrious</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/industrious/jobs/1917666'>Job Application for Business Intelligence Analyst at Industrious</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -432,7 +436,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://tiger-analytics.workable.com/jobs/1151059'>Senior Consultant - Business Intelligence - Tiger Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiger-analytics.workable.com/jobs/1151059'>Senior Consultant - Business Intelligence - Tiger Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of 
 Service apply. View website ? View all jobsHelp. Powered byWorkable.</p>
@@ -450,7 +454,7 @@ full time Business Intelligence (BI) analyst. The analyst will report within the
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1916549'>Job Application for Jr. Business Intelligence Analyst  at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1916549'>Job Application for Jr. Business Intelligence Analyst  at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -481,10 +485,6 @@ as Verve)</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SynecticsForManagementDecisionsInc/743999697573770-business-intelligence-bi-developer'>Synectics for Management Decisions, Inc Business Intelligence (BI) Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-17</p>
-<hr/>
-<h5><a href='http://teamoneusa.applytojob.com/apply/1pQIg7YYNs/Business-Intelligence-Data-Operations-Senior-Analyst'>Business Intelligence / Data Operations Senior Analyst - Team One Advertising - Career Page</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
 
