--- a/ios-developer.html
+++ b/ios-developer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e575214'>Stellenangebot: iOS Developer (m/f/x), Berlin 100% ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e575214'>Stellenangebot: iOS Developer (m/f/x), Berlin 100% ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -229,7 +229,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.sap.com/job/Walldorf-Mobile-iOS-Developer-Senior-Expert-%28fmd%29-SAP-Mobile-Center-of-Excellence-BW/559800101/'>Mobile iOS Developer Senior / Expert (f/m/d) - SAP Mobile Center of Excellence</a></h5> 
+<h5><a href='https://jobs.sap.com/job/Walldorf-Mobile-iOS-Developer-Senior-Expert-%28fmd%29-SAP-Mobile-Center-of-Excellence-BW/559800101/'>Mobile iOS Developer Senior / Expert (f/m/d) - SAP Mobile Center of Excellence</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -245,7 +245,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://sanerjobs.com/job/junior-ios-developer-proteams-information-technologies/75'>Junior iOS Developer at Proteams Information Technologies - SanerJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/junior-ios-developer-proteams-information-technologies/75'>Junior iOS Developer at Proteams Information Technologies - SanerJobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -269,7 +269,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bookingcom1/743999697200252-ios-developer'>Booking.com IOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bookingcom1/743999697200252-ios-developer'>Booking.com IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai Shanghai</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -329,7 +329,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Manchester England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studentbeans.workable.com/j/DCF338B76A'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://studentbeans.workable.com/j/DCF338B76A'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -371,7 +371,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p>Sep 29, 2019 ... As part of your application, we'd love to hear what you think are some of the best 
 designed apps (in terms of technical design) and why. This is open ended and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999696704223-ios-developer'>Mobile Programming LLC iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999696704223-ios-developer'>Mobile Programming LLC iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -385,7 +385,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tulip/9e32508b-d771-4569-85dd-7dc3daf1334d'>Tulip Retail - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/tulip/9e32508b-d771-4569-85dd-7dc3daf1334d'>Tulip Retail - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -447,7 +447,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blinkist/4211f754-00e5-4f05-844b-f16673f9d664'>Blinkist - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/blinkist/4211f754-00e5-4f05-844b-f16673f9d664'>Blinkist - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
